<resources>
    <string name="app_name">AgendaBootcamp</string>
    <string name="sent">Sent Meet for Calendar</string>
    <string name="open_contact_list">Open Contact List</string>
    <string name="open_photos_activity">Open Photos Activity</string>
    <string name="pick_gallery_photo">Pick Gallery Photo</string>
    <string name="take_picture_camera">Take Picture From Câmera</string>
    <string name="imagens">IMAGENS</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open_maps_activity">Open Maps Activity</string>
</resources>