<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSentEventCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/sent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOpenContactList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/open_contact_list"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOpenPhotosActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/open_photos_activity"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOpenMapsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text= "@string/open_maps_activity"/>

</LinearLayout>